@@ -15,6 +15,7 @@ project(
 )
 
 sratom_src_root = meson.current_source_dir()
+sratom_build_root = meson.current_build_dir()
 major_version = meson.project_version().split('.')[0]
 version_suffix = '-@0@'.format(major_version)
 versioned_name = 'sratom' + version_suffix
