@@ -38,6 +38,20 @@ if get_option('lint')
     if autoship.found()
       test('autoship', autoship, args: ['test', sratom_src_root], suite: 'data')
     endif
+
+    # Check code with cppcheck
+    cppcheck = find_program('cppcheck', required: false)
+    if cppcheck.found()
+      compdb_path = join_paths(sratom_build_root, 'compile_commands.json')
+      cppcheck_args = [
+        '--enable=warning,style,performance,portability',
+        '--error-exitcode=1',
+        '--project=' + compdb_path,
+        '--suppress=normalCheckLevelMaxBranches',
+        '-q',
+      ]
+      test('cppcheck', cppcheck, args: cppcheck_args, suite: 'code')
+    endif
   endif
 
   # Check licensing metadata
